--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {},
-  "keywords": []
+  "keywords": [],
+  "engines": {
+    "node": "v11.3.0"
+  }
 }
